<?xml version="1.0"?>
<package format="3">
  <name>camera_publisher</name>
  <version>0.0.0</version>
  <description>Package to publish camera images using ROS2.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
